name:                graph-algorithms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/graph-algorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph
                     , Data.Graph.Class
                     , Data.Graph.Matrix
                     , Data.Graph.Induced
                     , Data.Graph.Algorithm.LexBFS
                     , Data.Graph.Drawing
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers
                     , process
                     , bytestring
  default-language:    Haskell2010

executable carl-exe
  hs-source-dirs:      carl
  main-is:             Main.hs
  build-depends:       base
                     , graph-algorithms
                     , bytestring
  default-language:    Haskell2010

executable graph-algorithms-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , graph-algorithms
  default-language:    Haskell2010

test-suite graph-algorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graph-algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/graph-algorithms
